...
        android:text="Filtrar por Horário"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox_filtro_manha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="Manhã - 06:00 às 11:59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox_filtro_tarde"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Tarde - 12:00 às 17:59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_filtro_manha" />


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox_filtro_noite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Noite - 18:00 às 23:59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_filtro_tarde" />

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox_filtro_madrugada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="Madrugada - 00:00 às 05:59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_filtro_noite" />


    <TextView
        android:id="@+id/textView1"
...
        android:text="Voo Direto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox_filtro_voo_uma_parada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="1 Parada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_filtro_voo_direto" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAplicarFiltro"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
...
