<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.fabricio.desafioandroid.activity.OrdenarActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/radiogroup_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ordenar"
            android:padding="10dp"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radiobutton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maior_preco" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radiobutton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menor_preco" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radiobutton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menor_preco_tempo" />

    </RadioGroup>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnAplicarOrdenacao"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:text="@string/aplicar_ordena_o"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup_control" />


</android.support.constraint.ConstraintLayout>
